--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -65,7 +65,7 @@
         android:layout_width="126dp"
         android:layout_height="wrap_content"
         android:text="@string/browse"
-        android:onClick="sendFile" />
+        android:onClick="fileChooser" />
 
     <TextView
         android:id="@+id/TextView08"
