--- a/res/layout/activity_print_xml.xml
+++ b/res/layout/activity_print_xml.xml
@@ -2,20 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/black"
-    android:orientation="vertical"
     tools:context=".PrintXMLActivity" >
 
-	<TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#FFFFFF"
-        android:scrollbars="vertical"/>
+        android:textColor="@color/white"
+        android:text="@string/hello_world" />
 
 </LinearLayout>
