--- a/res/layout/activity_display_coordinates.xml
+++ b/res/layout/activity_display_coordinates.xml
@@ -8,22 +8,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PrintXMLActivity" >
+    tools:context=".DisplayCoordinates" >
 
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.07"
+        android:layout_height="match_parent"
         android:background="@color/black"
         android:textColor="@color/white" >
     </ListView>
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/getLocation"
-        android:onClick="buttonClick"/>
 
 </LinearLayout>
